# Custom_Gemma3_270M

./: .gitignore  Architecture.py  batch_creation.py  pyproject.toml  training.py
