[project]
name = "gemma3-270m"
version = "0.1.0"
description = ""
authors = [
    {name = "rvishakhs",email = "rvishakhs@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "numpy (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
